# visualdb

./: .gitignore  README.md  SPEC.md  main.py  pyproject.toml
dbvisual/: __init__.py
dbvisual/app/: __init__.py  app_settings.py  cli.py  form_service.py  formula.py  identity.py  main.py  master_detail_service.py  query_builder.py  report_service.py  rls.py  schema_service.py  sheet_service.py  shell.py  state.py  validation.py  webhooks.py
dbvisual/app/ai/: __init__.py  provider.py  settings.py  ui.py
dbvisual/app/components/: __init__.py  form_field.py  grid.py  webhooks_ui.py
dbvisual/app/pages/: applications.py  connections.py  forms.py  master_detail.py  reports.py  schema.py  settings.py  sheets.py
dbvisual/core/: __init__.py  compiler.py  connections.py  crud.py  events.py  introspect.py  queryspec.py  schema_ddl.py
dbvisual/meta/: __init__.py  attachments.py  models.py  secrets.py  store.py
docs/: spec.md
tests/: __init__.py  conftest.py  test_ai.py  test_app_smoke.py  test_compiler.py  test_crud.py  test_duckdb.py  test_encryption.py  test_forms.py  test_introspect.py  test_master_detail.py  test_meta_secrets.py  test_meta_store.py  test_reports.py  test_rls.py  test_schema_ddl.py  test_schema_service.py  test_session_settings.py  test_settings.py  test_sheet_enrichments.py  test_sheets.py  test_webhooks.py
